goscript_parser.go
// Code generated from GoScript.g4 by ANTLR 4.13.1. DO NOT EDIT.

package goScript // GoScript
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type GoScriptParser struct {
	*antlr.BaseParser
}

var GoScriptParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func goscriptParserInit() {
	staticData := &GoScriptParserStaticData
	staticData.LiteralNames = []string{
		"", "';'", "'func'", "'('", "','", "')'", "'{'", "'}'", "':'", "'['",
		"']'", "'map'", "'connector'", "'dynamic'", "'error'", "'int'", "'uint'",
		"'float'", "'bool'", "'char'", "'string'", "'if'", "'else'", "'for'",
		"'return'", "'break'", "'continue'", "'.'", "'++'", "'--'", "'new'",
		"'&&'", "'||'", "'?'", "':='", "", "", "'null'", "", "", "", "", "'+'",
		"'-'", "'*'", "'/'", "'%'", "'>'", "'>='", "'<'", "'<='", "'='", "'=='",
		"'!='", "'!'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "BooleanLiteral", "Identifier", "NULL", "HexLiteral", "DecimalLiteral",
		"OctalLiteral", "FloatingPointLiteral", "Plus", "Minus", "Multiplication",
		"Division", "Percent", "Gt", "Get", "Lt", "Let", "Assign", "Eq", "NEq",
		"Not", "CharacterLiteral", "StringLiteral", "COMMENT", "WS", "LINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"compilationUnit", "functionDeclaration", "formalParameters", "formalParameterDecl",
		"returnType", "block", "blockStatement", "variableDeclaration", "variableDeclarators",
		"variableDeclarator", "variableInitializer", "arrayInitializer", "mapInitializer",
		"mapEntry", "type_", "mapType", "connectorType", "dynamicType", "primitiveType",
		"statement", "ifStatement", "forStatement", "forControl", "forInit",
		"forUpdate", "returnStatement", "breakStatement", "continueStatement",
		"expressionStatement", "expression", "primary", "literal", "integerLiteral",
		"expressionList", "identifierList", "lvalue", "creator", "mapCreator",
		"arrayCreator", "creatorName", "connectorCreator", "primitiveCreator",
		"dynamicCreator",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GoScriptParserInit initializes any static state used to implement GoScriptParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGoScriptParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GoScriptParserInit() {
	staticData := &GoScriptParserStaticData
	staticData.once.Do(goscriptParserInit)
}

// NewGoScriptParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGoScriptParser(input antlr.TokenStream) *GoScriptParser {
	GoScriptParserInit()
	this := new(GoScriptParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GoScriptParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "GoScript.g4"

	return this
}

// GoScriptParser tokens.
const (
	GoScriptParserEOF                  = antlr.TokenEOF
	GoScriptParserT__0                 = 1
	GoScriptParserT__1                 = 2
	GoScriptParserT__2                 = 3
	GoScriptParserT__3                 = 4
	GoScriptParserT__4                 = 5
	GoScriptParserT__5                 = 6
	GoScriptParserT__6                 = 7
	GoScriptParserT__7                 = 8
	GoScriptParserT__8                 = 9
	GoScriptParserT__9                 = 10
	GoScriptParserT__10                = 11
	GoScriptParserT__11                = 12
	GoScriptParserT__12                = 13
	GoScriptParserT__13                = 14
	GoScriptParserT__14                = 15
	GoScriptParserT__15                = 16
	GoScriptParserT__16                = 17
	GoScriptParserT__17                = 18
	GoScriptParserT__18                = 19
	GoScriptParserT__19                = 20
	GoScriptParserT__20                = 21
	GoScriptParserT__21                = 22
	GoScriptParserT__22                = 23
	GoScriptParserT__23                = 24
	GoScriptParserT__24                = 25
	GoScriptParserT__25                = 26
	GoScriptParserT__26                = 27
	GoScriptParserT__27                = 28
	GoScriptParserT__28                = 29
	GoScriptParserT__29                = 30
	GoScriptParserT__30                = 31
	GoScriptParserT__31                = 32
	GoScriptParserT__32                = 33
	GoScriptParserT__33                = 34
	GoScriptParserBooleanLiteral       = 35
	GoScriptParserIdentifier           = 36
	GoScriptParserNULL                 = 37
	GoScriptParserHexLiteral           = 38
	GoScriptParserDecimalLiteral       = 39
	GoScriptParserOctalLiteral         = 40
	GoScriptParserFloatingPointLiteral = 41
	GoScriptParserPlus                 = 42
	GoScriptParserMinus                = 43
	GoScriptParserMultiplication       = 44
	GoScriptParserDivision             = 45
	GoScriptParserPercent              = 46
	GoScriptParserGt                   = 47
	GoScriptParserGet                  = 48
	GoScriptParserLt                   = 49
	GoScriptParserLet                  = 50
	GoScriptParserAssign               = 51
	GoScriptParserEq                   = 52
	GoScriptParserNEq                  = 53
	GoScriptParserNot                  = 54
	GoScriptParserCharacterLiteral     = 55
	GoScriptParserStringLiteral        = 56
	GoScriptParserCOMMENT              = 57
	GoScriptParserWS                   = 58
	GoScriptParserLINE_COMMENT         = 59
)

// GoScriptParser rules.
const (
	GoScriptParserRULE_compilationUnit     = 0
	GoScriptParserRULE_functionDeclaration = 1
	GoScriptParserRULE_formalParameters    = 2
	GoScriptParserRULE_formalParameterDecl = 3
	GoScriptParserRULE_returnType          = 4
	GoScriptParserRULE_block               = 5
	GoScriptParserRULE_blockStatement      = 6
	GoScriptParserRULE_variableDeclaration = 7
	GoScriptParserRULE_variableDeclarators = 8
	GoScriptParserRULE_variableDeclarator  = 9
	GoScriptParserRULE_variableInitializer = 10
	GoScriptParserRULE_arrayInitializer    = 11
	GoScriptParserRULE_mapInitializer      = 12
	GoScriptParserRULE_mapEntry            = 13
	GoScriptParserRULE_type_               = 14
	GoScriptParserRULE_mapType             = 15
	GoScriptParserRULE_connectorType       = 16
	GoScriptParserRULE_dynamicType         = 17
	GoScriptParserRULE_primitiveType       = 18
	GoScriptParserRULE_statement           = 19
	GoScriptParserRULE_ifStatement         = 20
	GoScriptParserRULE_forStatement        = 21
	GoScriptParserRULE_forControl          = 22
	GoScriptParserRULE_forInit             = 23
	GoScriptParserRULE_forUpdate           = 24
	GoScriptParserRULE_returnStatement     = 25
	GoScriptParserRULE_breakStatement      = 26
	GoScriptParserRULE_continueStatement   = 27
	GoScriptParserRULE_expressionStatement = 28
	GoScriptParserRULE_expression          = 29
	GoScriptParserRULE_primary             = 30
	GoScriptParserRULE_literal             = 31
	GoScriptParserRULE_integerLiteral      = 32
	GoScriptParserRULE_expressionList      = 33
	GoScriptParserRULE_identifierList      = 34
	GoScriptParserRULE_lvalue              = 35
	GoScriptParserRULE_creator             = 36
	GoScriptParserRULE_mapCreator          = 37
	GoScriptParserRULE_arrayCreator        = 38
	GoScriptParserRULE_creatorName         = 39
	GoScriptParserRULE_connectorCreator    = 40
	GoScriptParserRULE_primitiveCreator    = 41
	GoScriptParserRULE_dynamicCreator      = 42
)

// ICompilationUnitContext is an interface to support dynamic dispatch.
type ICompilationUnitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllFunctionDeclaration() []IFunctionDeclarationContext
	FunctionDeclaration(i int) IFunctionDeclarationContext
	AllVariableDeclaration() []IVariableDeclarationContext
	VariableDeclaration(i int) IVariableDeclarationContext

	// IsCompilationUnitContext differentiates from other interfaces.
	IsCompilationUnitContext()
}

type CompilationUnitContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCompilationUnitContext() *CompilationUnitContext {
	var p = new(CompilationUnitContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoScriptParserRULE_compilationUnit
	return p
}

func InitEmptyCompilationUnitContext(p *CompilationUnitContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoScriptParserRULE_compilationUnit
}

func (*CompilationUnitContext) IsCompilationUnitContext() {}

func NewCompilationUnitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompilationUnitContext {
	var p = new(CompilationUnitContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoScriptParserRULE_compilationUnit

	return p
}

func (s *CompilationUnitContext) GetParser() antlr.Parser { return s.parser }

func (s *CompilationUnitContext) EOF() antlr.TerminalNode {
	return s.GetToken(GoScriptParserEOF, 0)
}

func (s *CompilationUnitContext) AllFunctionDeclaration() []IFunctionDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IFunctionDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFunctionDeclarationContext); ok {
			tst[i] = t.(IFunctionDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *CompilationUnitContext) FunctionDeclaration(i int) IFunctionDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationContext)
}

func (s *CompilationUnitContext) AllVariableDeclaration() []IVariableDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVariableDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IVariableDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVariableDeclarationContext); ok {
			tst[i] = t.(IVariableDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *CompilationUnitContext) VariableDeclaration(i int) IVariableDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableDeclarationContext)
}

func (s *CompilationUnitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompilationUnitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompilationUnitContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoScriptListener); ok {
		listenerT.EnterCompilationUnit(s)
	}
}

func (s *CompilationUnitContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoScriptListener); ok {
		listenerT.ExitCompilationUnit(s)
	}
}

func (s *CompilationUnitContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GoScriptVisitor:
		return t.VisitCompilationUnit(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GoScriptParser) CompilationUnit() (localctx ICompilationUnitContext) {
	localctx = NewCompilationUnitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GoScriptParserRULE_compilationUnit)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(92)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&2095108) != 0 {
		p.SetState(90)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case GoScriptParserT__1:
			{
				p.SetState(86)
				p.FunctionDeclaration()
			}

		case GoScriptParserT__10, GoScriptParserT__11, GoScriptParserT__12, GoScriptParserT__13, GoScriptParserT__14, GoScriptParserT__15, GoScriptParserT__16, GoScriptParserT__17, GoScriptParserT__18, GoScriptParserT__19:
			{
				p.SetState(87)
				p.VariableDeclaration()
			}
			{
				p.SetState(88)
				p.Match(GoScriptParserT__0)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(94)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(95)
		p.Match(GoScriptParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFunctionDeclarationContext is an interface to support dynamic dispatch.
type IFunctionDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Identifier() antlr.TerminalNode
	FormalParameters() IFormalParametersContext
	Block() IBlockContext
	ReturnType() IReturnTypeContext

	// IsFunctionDeclarationContext differentiates from other interfaces.
	IsFunctionDeclarationContext()
}

type FunctionDeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunctionDeclarationContext() *FunctionDeclarationContext {
	var p = new(FunctionDeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoScriptParserRULE_functionDeclaration
	return p
}

func InitEmptyFunctionDeclarationContext(p *FunctionDeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoScriptParserRULE_functionDeclaration
}

func (*FunctionDeclarationContext) IsFunctionDeclarationContext() {}

func NewFunctionDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunctionDeclarationContext {
	var p = new(FunctionDeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoScriptParserRULE_functionDeclaration

	return p
}

func (s *FunctionDeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *FunctionDeclarationContext) Identifier() antlr.TerminalNode {
	return s.GetToken(GoScriptParserIdentifier, 0)
}

func (s *FunctionDeclarationContext) FormalParameters() IFormalParametersContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFormalParametersContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFormalParametersContext)
}

func (s *FunctionDeclarationContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *FunctionDeclarationContext) ReturnType() IReturnTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IReturnTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IReturnTypeContext)
}

func (s *FunctionDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunctionDeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunctionDeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoScriptListener); ok {
		listenerT.EnterFunctionDeclaration(s)
	}
}

func (s *FunctionDeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoScriptListener); ok {
		listenerT.ExitFunctionDeclaration(s)
	}
}

func (s *FunctionDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GoScriptVisitor:
		return t.VisitFunctionDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GoScriptParser) FunctionDeclaration() (localctx IFunctionDeclarationContext) {
	localctx = NewFunctionDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GoScriptParserRULE_functionDeclaration)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(97)
		p.Match(GoScriptParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(98)
		p.Match(GoScriptParserIdentifier)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(99)
		p.FormalParameters()
	}
	p.SetState(101)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&2095112) != 0 {
		{
			p.SetState(100)
			p.ReturnType()
		}

	}
	{
		p.SetState(103)
		p.Block()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFormalParametersContext is an interface to support dynamic dispatch.
type IFormalParametersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllFormalParameterDecl() []IFormalParameterDeclContext
	FormalParameterDecl(i int) IFormalParameterDeclContext

	// IsFormalParametersContext differentiates from other interfaces.
	IsFormalParametersContext()
}

type FormalParametersContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFormalParametersContext() *FormalParametersContext {
	var p = new(FormalParametersContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoScriptParserRULE_formalParameters
	return p
}

func InitEmptyFormalParametersContext(p *FormalParametersContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoScriptParserRULE_formalParameters
}

func (*FormalParametersContext) IsFormalParametersContext() {}

func NewFormalParametersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FormalParametersContext {
	var p = new(FormalParametersContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoScriptParserRULE_formalParameters

	return p
}

func (s *FormalParametersContext) GetParser() antlr.Parser { return s.parser }

func (s *FormalParametersContext) AllFormalParameterDecl() []IFormalParameterDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFormalParameterDeclContext); ok {
			len++
		}
	}

	tst := make([]IFormalParameterDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFormalParameterDeclContext); ok {
			tst[i] = t.(IFormalParameterDeclContext)
			i++
		}
	}

	return tst
}

func (s *FormalParametersContext) FormalParameterDecl(i int) IFormalParameterDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFormalParameterDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFormalParameterDeclContext)
}

func (s *FormalParametersContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FormalParametersContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FormalParametersContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoScriptListener); ok {
		listenerT.EnterFormalParameters(s)
	}
}

func (s *FormalParametersContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoScriptListener); ok {
		listenerT.ExitFormalParameters(s)
	}
}

func (s *FormalParametersContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GoScriptVisitor:
		return t.VisitFormalParameters(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GoScriptParser) FormalParameters() (localctx IFormalParametersContext) {
	localctx = NewFormalParametersContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GoScriptParserRULE_formalParameters)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(105)
		p.Match(GoScriptParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(114)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&2095104) != 0 {
		{
			p.SetState(106)
			p.FormalParameterDecl()
		}
		p.SetState(111)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == GoScriptParserT__3 {
			{
				p.SetState(107)
				p.Match(GoScriptParserT__3)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}
			{
				p.SetState(108)
				p.FormalParameterDecl()
			}

			p.SetState(113)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(116)
		p.Match(GoScriptParserT__4)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFormalParameterDeclContext is an interface to support dynamic dispatch.
type IFormalParameterDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Type_() IType_Context
	Identifier() antlr.TerminalNode

	// IsFormalParameterDeclContext differentiates from other interfaces.
	IsFormalParameterDeclContext()
}

type FormalParameterDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFormalParameterDeclContext() *FormalParameterDeclContext {
	var p = new(FormalParameterDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoScriptParserRULE_formalParameterDecl
	return p
}

func InitEmptyFormalParameterDeclContext(p *FormalParameterDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GoScriptParserRULE_formalParameterDecl
}

func (*FormalParameterDeclContext) IsFormalParameterDeclContext() {}

func NewFormalParameterDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FormalParameterDeclContext {
	var p = new(FormalParameterDeclContext)
